--- a/notebooks/notebook_carlos.ipynb
+++ b/notebooks/notebook_carlos.ipynb
@@ -2,8 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "714d49c2-743c-4958-b1d4-0eaff6955d72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f3d92cfe-060a-47ef-a60e-6cfd89975117",
+   "id": "d86b3594-31b0-48da-befa-1ce6633372da",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,9 +21,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "venv",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
