--- a/notebooks/Zina_notebooks/zina_notebook.ipynb
+++ b/notebooks/Zina_notebooks/zina_notebook.ipynb
@@ -11,9 +11,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Current Week House Martell",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "current_data_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -25,7 +25,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
