Finalized renaming of demo notebook to merge notebook

--- a/notebooks/Carlos_notebooks/carlos_clients_notebook.ipynb
+++ b/notebooks/Carlos_notebooks/carlos_clients_notebook.ipynb
@@ -2,8 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3742039d-3344-4788-b150-bb4e472fb6c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cebaaa0-d9e1-4b54-a436-e205338bb3ec",
    "metadata": {},
    "outputs": [],
    "source": []
