--- a/notebooks/Carlos_notebooks/carlos_clients_notebook.ipynb
+++ b/notebooks/Carlos_notebooks/carlos_clients_notebook.ipynb
@@ -17,8 +17,351 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5cebaaa0-d9e1-4b54-a436-e205338bb3ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://raw.githubusercontent.com/cgveradi/house_martell_project/main/data/clean/df_clean.csv\"\n",
+    "df = pd.read_csv(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5f1a36a8-42b5-4ace-a258-5e1fb0b8c0b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>client_id</th>\n",
+       "      <th>visitor_id</th>\n",
+       "      <th>visit_id</th>\n",
+       "      <th>process_step</th>\n",
+       "      <th>date_time</th>\n",
+       "      <th>Variation</th>\n",
+       "      <th>tenure_yrs</th>\n",
+       "      <th>clnt_tenure_mnth</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>num_accts</th>\n",
+       "      <th>bal</th>\n",
+       "      <th>calls_6_mnth</th>\n",
+       "      <th>logons_6_mnth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>555</td>\n",
+       "      <td>402506806_56087378777</td>\n",
+       "      <td>637149525_38041617439_716659</td>\n",
+       "      <td>start</td>\n",
+       "      <td>2017-04-15 12:57:56</td>\n",
+       "      <td>Test</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>U</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25454.66</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>555</td>\n",
+       "      <td>402506806_56087378777</td>\n",
+       "      <td>637149525_38041617439_716659</td>\n",
+       "      <td>step_1</td>\n",
+       "      <td>2017-04-15 12:58:03</td>\n",
+       "      <td>Test</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>U</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25454.66</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>555</td>\n",
+       "      <td>402506806_56087378777</td>\n",
+       "      <td>637149525_38041617439_716659</td>\n",
+       "      <td>step_2</td>\n",
+       "      <td>2017-04-15 12:58:35</td>\n",
+       "      <td>Test</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>U</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25454.66</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>555</td>\n",
+       "      <td>402506806_56087378777</td>\n",
+       "      <td>637149525_38041617439_716659</td>\n",
+       "      <td>step_3</td>\n",
+       "      <td>2017-04-15 13:00:14</td>\n",
+       "      <td>Test</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>U</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25454.66</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>555</td>\n",
+       "      <td>402506806_56087378777</td>\n",
+       "      <td>637149525_38041617439_716659</td>\n",
+       "      <td>confirm</td>\n",
+       "      <td>2017-04-15 13:00:34</td>\n",
+       "      <td>Test</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>U</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25454.66</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>317230</th>\n",
+       "      <td>9999729</td>\n",
+       "      <td>834634258_21862004160</td>\n",
+       "      <td>870243567_56915814033_814203</td>\n",
+       "      <td>step_2</td>\n",
+       "      <td>2017-05-08 16:08:40</td>\n",
+       "      <td>Test</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>107059.74</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>317231</th>\n",
+       "      <td>9999729</td>\n",
+       "      <td>834634258_21862004160</td>\n",
+       "      <td>870243567_56915814033_814203</td>\n",
+       "      <td>step_3</td>\n",
+       "      <td>2017-05-08 16:09:19</td>\n",
+       "      <td>Test</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>107059.74</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>317232</th>\n",
+       "      <td>9999729</td>\n",
+       "      <td>834634258_21862004160</td>\n",
+       "      <td>870243567_56915814033_814203</td>\n",
+       "      <td>confirm</td>\n",
+       "      <td>2017-05-08 16:09:40</td>\n",
+       "      <td>Test</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>107059.74</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>317233</th>\n",
+       "      <td>9999832</td>\n",
+       "      <td>145538019_54444341400</td>\n",
+       "      <td>472154369_16714624241_585315</td>\n",
+       "      <td>start</td>\n",
+       "      <td>2017-05-16 16:46:03</td>\n",
+       "      <td>Test</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>281.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>431887.61</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>317234</th>\n",
+       "      <td>9999832</td>\n",
+       "      <td>145538019_54444341400</td>\n",
+       "      <td>472154369_16714624241_585315</td>\n",
+       "      <td>step_1</td>\n",
+       "      <td>2017-05-16 16:46:11</td>\n",
+       "      <td>Test</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>281.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>431887.61</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>317235 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        client_id             visitor_id                      visit_id  \\\n",
+       "0             555  402506806_56087378777  637149525_38041617439_716659   \n",
+       "1             555  402506806_56087378777  637149525_38041617439_716659   \n",
+       "2             555  402506806_56087378777  637149525_38041617439_716659   \n",
+       "3             555  402506806_56087378777  637149525_38041617439_716659   \n",
+       "4             555  402506806_56087378777  637149525_38041617439_716659   \n",
+       "...           ...                    ...                           ...   \n",
+       "317230    9999729  834634258_21862004160  870243567_56915814033_814203   \n",
+       "317231    9999729  834634258_21862004160  870243567_56915814033_814203   \n",
+       "317232    9999729  834634258_21862004160  870243567_56915814033_814203   \n",
+       "317233    9999832  145538019_54444341400  472154369_16714624241_585315   \n",
+       "317234    9999832  145538019_54444341400  472154369_16714624241_585315   \n",
+       "\n",
+       "       process_step            date_time Variation  tenure_yrs  \\\n",
+       "0             start  2017-04-15 12:57:56      Test         3.0   \n",
+       "1            step_1  2017-04-15 12:58:03      Test         3.0   \n",
+       "2            step_2  2017-04-15 12:58:35      Test         3.0   \n",
+       "3            step_3  2017-04-15 13:00:14      Test         3.0   \n",
+       "4           confirm  2017-04-15 13:00:34      Test         3.0   \n",
+       "...             ...                  ...       ...         ...   \n",
+       "317230       step_2  2017-05-08 16:08:40      Test        10.0   \n",
+       "317231       step_3  2017-05-08 16:09:19      Test        10.0   \n",
+       "317232      confirm  2017-05-08 16:09:40      Test        10.0   \n",
+       "317233        start  2017-05-16 16:46:03      Test        23.0   \n",
+       "317234       step_1  2017-05-16 16:46:11      Test        23.0   \n",
+       "\n",
+       "        clnt_tenure_mnth   age gender  num_accts        bal  calls_6_mnth  \\\n",
+       "0                   46.0  29.5      U        2.0   25454.66           2.0   \n",
+       "1                   46.0  29.5      U        2.0   25454.66           2.0   \n",
+       "2                   46.0  29.5      U        2.0   25454.66           2.0   \n",
+       "3                   46.0  29.5      U        2.0   25454.66           2.0   \n",
+       "4                   46.0  29.5      U        2.0   25454.66           2.0   \n",
+       "...                  ...   ...    ...        ...        ...           ...   \n",
+       "317230             124.0  31.0      F        3.0  107059.74           6.0   \n",
+       "317231             124.0  31.0      F        3.0  107059.74           6.0   \n",
+       "317232             124.0  31.0      F        3.0  107059.74           6.0   \n",
+       "317233             281.0  49.0      F        2.0  431887.61           1.0   \n",
+       "317234             281.0  49.0      F        2.0  431887.61           1.0   \n",
+       "\n",
+       "        logons_6_mnth  \n",
+       "0                 6.0  \n",
+       "1                 6.0  \n",
+       "2                 6.0  \n",
+       "3                 6.0  \n",
+       "4                 6.0  \n",
+       "...               ...  \n",
+       "317230            9.0  \n",
+       "317231            9.0  \n",
+       "317232            9.0  \n",
+       "317233            4.0  \n",
+       "317234            4.0  \n",
+       "\n",
+       "[317235 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0c9b9cac-6153-4277-8c8f-31913a0a8c98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['gender'] = df['gender'].replace({'M': 'Male','F': 'Female','U': 'Unknown','X': 'Other'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d2223315-d302-4636-aa4b-3f51aea1a747",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Unknown', 'Male', 'Female', nan, 'Other'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['gender'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a626489-7203-4d7d-b703-e91555c1fca3",
    "metadata": {},
    "outputs": [],
    "source": []
