--- a/notebooks/Carlos_notebooks/carlos_merge_notebook.ipynb
+++ b/notebooks/Carlos_notebooks/carlos_merge_notebook.ipynb
@@ -1038,9 +1038,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Current Week House Martell",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "current_data_kernel"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
